fix: text input align to the left

--- a/src/ex1/style.css
+++ b/src/ex1/style.css
@@ -64,7 +64,6 @@
     position: relative;
     display: flex;
     flex-direction: row;
-    justify-content: center;
     align-items: center;
 }
 
